force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/AttendantLoginManualQueue__c.field-meta.xml
<CustomField>
    <fullName>AttendantLoginManualQueue__c</fullName>
    <formula>vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.SellerLogin__c</formula>
    <label>Login Atendente</label>
    <type>Text</type>
</CustomField>