force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <formula>vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.SalesChannel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal</label>
    <type>Text</type>
</CustomField>