force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/CreatedDateManualQueue__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateManualQueue__c</fullName>
    <formula>vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Abertura da Ordem</label>
    <type>DateTime</type>
</CustomField>