force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/CurrentMsisdn__c.field-meta.xml
<CustomField>
    <fullName>CurrentMsisdn__c</fullName>
    <description>Campo de número da linha para logs habilitação remota DW.</description>
    <formula>vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.CurrentMSISDN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSISDN</label>
    <type>Text</type>
</CustomField>