force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/CustomerDocument__c.field-meta.xml
<CustomField>
    <fullName>CustomerDocument__c</fullName>
    <formula>vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.Account.DocumentNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento do Cliente</label>
    <type>Text</type>
</CustomField>