force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/CustomerDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerDocumentNumber__c</fullName>
    <description>Fórmula utilizada para exibir o número de documento da Account do Order Item ou do Fulfilment Request Line.</description>
    <formula>IF (ISBLANK(vlocity_cmt__OrderItemId__c),
vlocity_cmt__FulfilmentRequestLineId__r.vlocity_cmt__FulfilmentRequestID__r.vlocity_cmt__AccountId__r.DocumentNumber__c,
vlocity_cmt__OrderItemId__r.Order.Account.DocumentNumber__c
)</formula>
    <label>Número do Documento do Cliente</label>
    <type>Text</type>
</CustomField>