force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <description>Fórmula utilizada para exibir o nome da Account do Order Item ou do Fulfilment Request Line.</description>
    <formula>IF (ISBLANK(vlocity_cmt__OrderItemId__c),
vlocity_cmt__FulfilmentRequestLineId__r.vlocity_cmt__FulfilmentRequestID__r.vlocity_cmt__AccountId__r.Name ,
vlocity_cmt__OrderItemId__r.Order.Account.Name
)</formula>
    <label>Nome do Cliente</label>
    <type>Text</type>
</CustomField>