force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/Data_Abertura_da_Ordem__c.field-meta.xml
<CustomField>
    <fullName>Data_Abertura_da_Ordem__c</fullName>
    <formula>vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Abertura da Ordem</label>
    <type>Date</type>
</CustomField>