force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/DocumentNumberManualQueue__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumberManualQueue__c</fullName>
    <formula>CustomerDocumentNumber__c</formula>
    <label>Número de Documento</label>
    <type>Text</type>
</CustomField>