force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/DocumentTypeManualQueue__c.field-meta.xml
<CustomField>
    <fullName>DocumentTypeManualQueue__c</fullName>
    <formula>TEXT(vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__AccountId__r.DocumentType__c)</formula>
    <label>Tipo de Documento</label>
    <type>Text</type>
</CustomField>