force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/LineNumberManualQueue__c.field-meta.xml
<CustomField>
    <fullName>LineNumberManualQueue__c</fullName>
    <formula>vlocity_cmt__OrderItemId__r.vlocity_cmt__LineNumber__c</formula>
    <label>Número da Linha</label>
    <type>Text</type>
</CustomField>