force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/OrderNumberManualQueue__c.field-meta.xml
<CustomField>
    <fullName>OrderNumberManualQueue__c</fullName>
    <formula>OrderNumber__c</formula>
    <label>Número Ordem</label>
    <type>Text</type>
</CustomField>