force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <formula>CASE(TEXT(vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.Type),&quot;Recharge&quot;,&quot;Recarga online&quot;,&quot;Change&quot;,&quot;Troca de produto&quot;,&quot;RechargeVoucher&quot;,&quot;Recarga física&quot;,&quot;AdditionalPackage&quot;,&quot;Pacote Adicional&quot;,&quot;Promotion&quot;,&quot;Promoção&quot;,&quot;PrepaidRemoteActivation&quot;, &quot;Habilitação Pré pago Remota&quot;, &quot;Habilitação Pré&quot;, &quot;Habilitação Pré pago&quot;,	&quot;Erro&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo da Ordem</label>
    <type>Text</type>
</CustomField>