force-app/main/default/objects/vlocity_cmt__OrchestrationItem__c/fields/StoreNameManualQueue__c.field-meta.xml
<CustomField>
    <fullName>StoreNameManualQueue__c</fullName>
    <formula>vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.StoreUser__c</formula>
    <label>Nome Loja/Site</label>
    <type>Text</type>
</CustomField>